2008-11-27 01:27-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSWorkspace.m: [NSWorkspace getInfoForFile:application:type:]
	appName output parameter is set to nil if no application is found.

2008-11-27 00:48-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Minor correction to previous change.

2008-11-26 21:09-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Correct bug #24780.  There was an issue 
	in NSClassSwapper when decoding classes which use cells from nib files.
	* Source/NSSecureTextField.m: Encode in encodeWithCoder and 
	decodeWithCoder: a key for storing the bool _echosBullets.

2008-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-undoReplaceCharactersInRange:...,
	-shouldChangeTextInRange:replacementString:): Improve
	implementation of undo and register redo operations.

2008-11-26 16:27-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSWindow.h: Declaration for attachedSheet.
	* Source/NSWindow.m: Added skeleton implementation of attachedSheet.

2008-11-25  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSAttributedString.m (-doubleClickAtIndex:): Double
	clicking on a white space character also selects the surrounding
	white space as on OS X.

2008-11-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/AppKit/NSTextView.h: Rename and change types of
	attributes related to drag and drop.

	* Source/NSTextView.m: Improve implementation of drag and drop so
	that an ongoing drag operation no longer changes the target view's
	current selection.

	* Source/NSTextView.m (-_characterIndexForPoint:respectFraction:):
	Always return a valid index.

	* Source/NSTextView.m (-mouseDown:): Omit check for valid index
	after calling _characterIndexForPoint:...

	* Source/NSTextView.m (-initWithCoder:): Avoid code duplication.

2008-11-23 18:56-EST Gregory John Casamento <greg_casamento@yahoo.com>
